added references to additional Bruker data/meta-data. Added citations.

--- a/docs/source/bibtex/ref.bib
+++ b/docs/source/bibtex/ref.bib
@@ -1,40 +1,67 @@
-@article{Gursoy:14a,
-author = {G\"{u}rsoy D and De Carlo F and Xiao X and Jacobsen C},
-title = {TomoPy: A framework for the analysis of synchrotron tomographic data},
-journal = {Journal of Synchrotron Radiation},
-volume = {21},
-number = {5},
-pages = {1188--1193},
-year = {2014}
+@article{Haberthur:2025,
+title = {MicroCT-based vascular imaging in bone and peri-implant tissues},
+journal = {Tomography of Materials and Structures},
+volume = {9},
+pages = {100074},
+year = {2025},
+issn = {2949-673X},
+doi = {https://doi.org/10.1016/j.tmater.2025.100074},
+url = {https://www.sciencedirect.com/science/article/pii/S2949673X25000270},
+author = {David Haberthür and Oleksiy-Zakhar Khoma and Tim Hoessly and Eugenio Zoni and Marianna Kruithof-de Julio and Stewart D. Ryan and Myriam Grunewald and Benjamin Bellón and Rebecca Sandgren and Stephan Handschuh and Benjamin E. Pippenger and Dieter Bosshardt and Valentin Djonov and Ruslan Hlushchuk},
+keywords = {MicroCT, MicroangioCT, Tomography, Vascular imaging, Contrast agent, Bone, Implant, Biomedical devices, Dual energy, Peri-implant tissue},
+abstract = {Angiogenesis is essential for skeletal development, bone healing, and regeneration. Improved non-destructive, three-dimensional (3D) imaging of the vasculature within bone tissue benefits many research areas, especially implantology and tissue engineering. X-ray microcomputed tomography (microCT) is a well-suited non-destructive 3D imaging technique for bone morphology. For microCT-based detection of vessels, it is paramount to use contrast enhancement. Limited differences in radiopacity between perfusion agents and mineralized bone make their distinct segmentation problematic and have been a major drawback of this approach. A decalcification step resolves this issue but inhibits the simultaneous assessment of bone microstructure and vascular morphology. The problem of contrasting becomes further complicated in samples with metal implants. This study describes contrast-enhanced microCT-based visualization of vasculature within bone tissue in small and large animal models, also in the vicinity of the metal implants. We present simultaneous microvascular and bone imaging in murine tibia, a murine bone metastatic model, the pulp chamber, gingiva, and periodontal ligaments. In a large animal model (minipig), we performed visualization and segmentation of different tissue types and vessels in the hemimandible containing metal implants. We further demonstrate the potential of dual-energy imaging in distinguishing bone tissue from the applied contrast agents. This work introduces a non-destructive approach for 3D imaging of vasculature within soft and hard tissues near metal implants in a large animal model.}
 }
 
-@article {Paganin:02,
-author = {Paganin D and Mayo SC and Gureyev TE and Miller PR and Wilkins SW},
-title = {Simultaneous phase and amplitude extraction from a single defocused image of a homogeneous object},
-journal = {Journal of Microscopy},
-year = {2002},
-volume = {206},
-number = {1},
-pages = {33--40}
+@misc{Haberthur:2025:data,
+  title = {{MicroCT-based vascular imaging in bone and peri-implant tissues. Data}},
+  author = {David Haberthür and Oleksiy-Zakhar Khoma and Tim Hoessly and Eugenio Zoni and Marianna Kruithof-de Julio and Stewart D. Ryan and Myriam Grunewald and Benjamin Bellón and Rebecca Sandgren and Stephan Handschuh and Benjamin E. Pippenger and Dieter Bosshardt and Valentin Djonov and Ruslan Hlushchuk},
+  howpublished = {\url{https://github.com/microct-ana-unibe-ch/microvasculature-manuscript/tree/main/content/data}},
+  note = {Accessed: 2025-08-21}
 }
 
-@article{Vo:14,
-author = {Vo N and Drakopoulos M and Atwood RC and Reinhard C},
-title = {Reliable method for calculating the center of rotation in parallel-beam tomography},
-journal = {Optics Express},
-year = {2014},
-volume = {22},
-number = {16},
-pages = {19078--19086}
+@article{Aaldijk:2025,
+    doi = {10.1371/journal.pone.0314261},
+    author = {Aaldijk, Dea AND Halm, Sebastian AND Liashchenko, Diana N. AND Haberthür, David},
+    journal = {PLOS ONE},
+    publisher = {Public Library of Science},
+    title = {Contrast-enhanced Micro-CT imaging of a foetal female pelvic floor reveals anatomical details},
+    year = {2025},
+    month = {06},
+    volume = {20},
+    url = {https://doi.org/10.1371/journal.pone.0314261},
+    pages = {1-17},
+    abstract = {Background The pelvic floor is a highly important structure for the stability of the pelvis, providing support for the organs that lie within it. Until today, the detailed anatomy of the female perineal centre and the exact course of surrounding muscles remain controversial. We demonstrate a method to non-destructively obtain high-resolution contrast-enhanced x-ray microtomography images from a long-fixed sample and thereby aim to contribute to the detailed anatomical knowledge about the female pelvic floor.   Materials and methods A human foetal pelvis of 20–21 weeks gestational age, formalin-fixed for 4 years, was immersed in Lugol solution and tomographically scanned periodically to document the staining process. The influence of the former fixation time was addressed by comparison with a short time fixed mouse pelvis. High-resolution imaging was performed using µCT, with detailed anatomical analysis supported by segmentation and 3D reconstruction.   Results Lugol staining of long-fixed tissue was effective and showed no disadvantages compared to short-fixed tissue. Lugol staining and high-resolution µCT images provided a nicely stained image-stack with clearly identifiable tissue types. The anatomy of the foetal pelvis and its structures were resolved in detail. Interconnections between the external anal sphincter, the bulbospongiosus muscle and the superficial transverse perineal muscle could be shown within the perineal centre. There was no evidence for a skeletal muscle that corresponded to the formerly described deep transverse perineal muscle, instead there was cloudy-looking tissue, most likely smooth muscle fibres dispersed in connective tissue in a 3-D arrangement.   Conclusions X-ray microtomography of Lugol-stained tissue is an excellent method to gain anatomical details in high resolution, in a non-invasive and non-destructive way, independently of the fixation time. Using this method, the topographical relationships of the pelvic floor muscles could be illustrated, showing their linkage within the perineal centre.},
+    number = {6},
+
 }
 
-@article{Vo:18,
-author = {Vo N and and Atwood RC and Drakopoulos M},
-title = {Superior techniques for eliminating ring artifacts in X-ray micro-tomography},
-journal = {Optics Express},
-year = {2018},
-volume = {26},
-number = {22},
-pages = {28396--28412}
+@misc{Aaldijk:2025:data,
+  title = {{Contrast-enhanced Micro-CT imaging of a foetal female pelvic floor reveals anatomical details. Data}},
+  author = {Aaldijk, Dea AND Halm, Sebastian AND Liashchenko, Diana N. AND Haberthür, David},
+  howpublished = {\url{https://github.com/habi/FemalePelvicFloor/tree/main/logfiles}},
+  note = {Accessed: 2025-08-21}
 }
 
+
+@article{Haberthur:2023,
+    doi = {10.1371/journal.pone.0291003},
+    author = {Haberthür, David AND Law, Mikki AND Ford, Kassandra AND Häsler, Marcel AND Seehausen, Ole AND Hlushchuk, Ruslan},
+    journal = {PLOS ONE},
+    publisher = {Public Library of Science},
+    title = {Microtomographic investigation of a large corpus of cichlids},
+    year = {2023},
+    month = {09},
+    volume = {18},
+    url = {https://doi.org/10.1371/journal.pone.0291003},
+    pages = {1-11},
+    abstract = {A large collection of cichlids (N = 133) from Lake Victoria in Africa, with total lengths ranging from 6 to 18 cm was nondestructively imaged using micro-computed tomography. We present a method to efficiently obtain three-dimensional tomographic datasets of the oral and pharyngeal jaws and the whole skull of these fishes to accurately describe their morphology. The tomographic data we acquired (9.8 TB of projection images) yielded 1.5 TB of three-dimensional image stacks used for extracting the relevant features of interest. Herein we present our method and outlooks on analyzing the acquired data; a morphological description of the oral and pharyngeal jaws, a three-dimensional geometric morphometrics analysis of landmarked skull features, and a robust method to automatically extract otoliths from the tomographic data.},
+    number = {9},
+
+}
+
+@misc{Haberthur:2023:data,
+  title = {{Microtomographic investigation of a large corpus of cichlids. Data}},
+  author = {Haberthür, David AND Law, Mikki AND Ford, Kassandra AND Häsler, Marcel AND Seehausen, Ole AND Hlushchuk, Ruslan},
+  howpublished = {\url{https://github.com/habi/EAWAG/tree/main/logfiles}},
+  note = {Accessed: 2025-08-21}
+}
